--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <head><title>NETWORK</title></head>
 <body><font size=+5>
-상현아 고생했어 너 성공했다?<br>
+first http server success<br>
 </font></body>
 </html>
